Fixes horizontal rules on mobile

--- a/src/_scss/layout/_account.scss
+++ b/src/_scss/layout/_account.scss
@@ -51,8 +51,4 @@ section.user-info, section.your-password {
     button {
         clear: both;
     }
-
-    .unverified {
-        font-weight: bold;
-    }
 }
