--- a/src/_scss/layout/_manage-filters.scss
+++ b/src/_scss/layout/_manage-filters.scss
@@ -67,7 +67,6 @@ section.filters {
             margin-top: 0;
             position: absolute;
             right: 0;
-            top: 0.5em;
         }
     }
 }
